Convert_To_K8S/ingress/nxs-ingress-omit-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: omit-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    #    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
     paths:
     - path: /api/v1/signin
       backend:
         serviceName: admin
         servicePort: 5000
